--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <canal.version>1.1.4</canal.version>
         <fastjson.version>1.2.70</fastjson.version>
         <mybatis.version>2.1.1</mybatis.version>
+        <pagehelper-starter.version>1.2.3</pagehelper-starter.version>
     </properties>
 
     <dependencies>
@@ -74,6 +75,11 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>${pagehelper-starter.version}</version>
         </dependency>
 
         <dependency>
