--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,18 +7,19 @@ mybatis:
   type-aliases-package: com.bi.dbpedia.model
   config-location: classpath:mybatis-config.xml
 
+
 spring:
-#  kafka:
-#    bootstrap-servers: hailuo.aliyun.com:9092
-#    producer:
-#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-#      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-#    consumer:
-#      group-id: dbpedia
-#      auto-commit-interval: 1000
-#      enable-auto-commit: true
-#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-#      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  kafka:
+    bootstrap-servers: hailuo.aliyun.com:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer:
+      group-id: dbpedia
+      auto-commit-interval: 1000
+      enable-auto-commit: true
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
   datasource:
     druid:
       url: jdbc:mysql://cdb-ezjh4cma.bj.tencentcdb.com:10210/Test?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
@@ -42,3 +43,6 @@ spring:
       uri: bolt://192.168.3.14:7687
       username: neo4j
       password: abcd1234
+
+elasticsearch:
+  ip: 47.94.152.5:9200
