--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,21 @@
         <canal.version>1.1.4</canal.version>
         <fastjson.version>1.2.70</fastjson.version>
         <mybatis.version>2.1.1</mybatis.version>
+        <jwt.version>0.9.0</jwt.version>
         <pagehelper-starter.version>1.2.3</pagehelper-starter.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
